vault/service.yaml
# vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-service
  namespace: vault
spec:
  selector:
    app: vault
  ports:
    - protocol: http
      port: 8200
      targetPort: 8200
